@@ -205,6 +205,9 @@ Deprecated Functionality
 - ``RecordVal::Lookup(const char*, bool)`` is deprecated, use either
   ``RecordVal::GetField()`` or ``RecordVal::GetFieldOrDefault()``.
 
+- ``TableVal::Assign`` methods taking raw ``Val*`` are deprecated, use the
+  overloads taking ``IntrusivePtr``.
+
 Zeek 3.1.0
 ==========
 
